--- a/bio.html
+++ b/bio.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Rebecca Howarth</title>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="syling.css"/>
+	<link rel="stylesheet" href="styling.css"/>
 </head>
 
 <body>
