--- a/bio.html
+++ b/bio.html
@@ -10,7 +10,10 @@
 
 <body>
 
-<p> Hello. </p>
+<p> Rebecca Howarth was born in Moorestown, New Jersey.  </p>
+
+<p> She is currently a sophomore at Tufts University studying Computer Science. When she isn't spending time coding in Halligan Hall Rebecca enjoys <a href="notfound.jpg">activities</a>
+</p>
 
 </body>
 
