--- a/bio.html
+++ b/bio.html
@@ -11,10 +11,10 @@
 <body>
 <br/>
 <br/>
-<p> <h3> Rebecca Howarth was born in Moorestown, New Jersey. </h3> </p>
+<h3> Rebecca Howarth was born in Moorestown, New Jersey. </h3> 
 
-<p> <h3> She is currently a sophomore at Tufts University studying Computer Science. When she isn't spending time coding in Halligan Hall Rebecca enjoys <a href="notfound.jpg">activities</a> .</h3>
-</p>
+<h3> She is currently a sophomore at Tufts University studying Computer Science. When she isn't spending time coding in Halligan Hall Rebecca enjoys <a href="notfound.jpg">activities</a> .</h3>
+
 
 </body>
 
