--- a/bio.html
+++ b/bio.html
@@ -3,9 +3,9 @@
 <html>
 
 <head>
-	<title>Rebecca Howarth</title>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="styling.css"/>
+    <title>Rebecca Howarth</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styling.css"/>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
 <br/>
 <h3> Rebecca Howarth was born in Moorestown, New Jersey. </h3> 
 
-<h3> She is currently a sophomore at Tufts University studying Computer Science. When she isn't spending time coding in Halligan Hall Rebecca enjoys <a href="notfound.jpg">activities</a> .</h3>
+<h3> She is currently a sophomore at Tufts University studying Computer Science. When she isn't spending time coding in Halligan Hall Rebecca enjoys <a href="notfound.jpg">activities.</a></h3>
 
 
 </body>
